src/test/ui/error-codes/E0005.stderr
error[E0005]: refutable pattern in local binding: `None` not covered
  --> $DIR/E0005.rs:13:9
   |
13 |     let Some(y) = x; //~ ERROR E0005
   |         ^^^^^^^ pattern `None` not covered

error: aborting due to previous error

